Added images and finish basic static page layout

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,37 @@
 body {
-    background-color: #808080;
+  text-align: center;
+  background-color: #808080;
+}
+
+span {
+  display: block;
+}
+
+.images-container {
+  display: grid;
+  grid-template-columns: 150px 1fr;
+  justify-items: center;
+  margin-top: 22px;
+  margin-bottom: 22px;
+}
+
+.targets {
+  justify-self: right;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 50px;
+}
+
+.timer {
+  margin-top: 12px;
+  margin-bottom: 12px;
+}
+
+.main-image {
+  display: grid;
+  grid-template-columns: repeat(10, 1fr);
+  grid-template-rows: repeat(10, 1fr);
+  height: 1000px;
+  width: 1000px;
 }
